--- a/src/TechTalkers.Web/src/TechTalkers.Web/.jscsrc
+++ b/src/TechTalkers.Web/src/TechTalkers.Web/.jscsrc
@@ -53,10 +53,10 @@
     "disallowSpacesInsideArrayBrackets": "all",
     "disallowSpacesInsideParentheses": true,
 
-    "validateJSDoc": {
-        "checkParamNames": true,
-        "requireParamTypes": true
-    },
+    //"jsDoc": {
+    //    "checkParamNames": true,
+    //    "requireParamTypes": true
+    //},
 
     "disallowMultipleLineBreaks": true,
 
