--- a/src/TechTalkers.Web/src/TechTalkers.Web/package.json
+++ b/src/TechTalkers.Web/src/TechTalkers.Web/package.json
@@ -4,8 +4,15 @@
   "private": true,
   "devDependencies": {
     "eslint": "^3.4.0",
-    "eslint-plugin-angular": "^1.3.1",
-    "eslint-plugin-react": "^6.2.0"
+    "eslint-plugin-angular": "^1.3.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-typescript": "^2.13.6",
+    "gulp-uglify": "^2.0.0",
+    "merge2": "^1.0.2",
+    "rimraf": "^2.5.4"
+  }
 }
