techtalkers starter template

--- a/src/TechTalkers.Web/src/TechTalkers.Web/bower.json
+++ b/src/TechTalkers.Web/src/TechTalkers.Web/bower.json
@@ -7,6 +7,7 @@
   "version": "1.0.0",
   "main": "pathToMain",
   "dependencies": {
-    "angular-material": "^1.1.1"
+    "angular-material": "^1.1.1",
+    "angular-route": "^1.5.8"
   }
 }
